--- a/about.html
+++ b/about.html
@@ -16,83 +16,35 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-        <div class="grid-wrapper">
-            <div>
+    </header>
+        <div class="content-container">
+            <div class="img2">
                 <img src="assets/images/1.jpg">
-            </div>
-            <div>
                 <img src="assets/images/2.jpg">
-            </div>
-            <div>
                 <img src="assets/images/3.jpg">
-            </div>
-            <div>
                 <img src="assets/images/4.jpg">
-            </div>
-            <div>
                 <img src="assets/images/5.jpg">
-            </div>
-            <div>
                 <img src="assets/images/6.jpg">
-            </div>
-            <div>
                 <img src="assets/images/7.jpg">
-            </div>
-            <div>
                 <img src="assets/images/8.jpg">
-            </div>
-            <div>
                 <img src="assets/images/9.jpg">
-            </div>
-            <div>
                 <img src="assets/images/10.jpg">
-            </div>
-            <div>
                 <img src="assets/images/11.jpg">
-            </div>
-            <div>
                 <img src="assets/images/12.jpg">
-            </div>
-            <div>
                 <img src="assets/images/13.jpg">
-            </div>
-            <div>
                 <img src="assets/images/14.jpg">
-            </div>
-            <div>
                 <img src="assets/images/15.jpg">
-            </div>
-            <div>
                 <img src="assets/images/16.jpg">
-            </div>
-            <div>
                 <img src="assets/images/17.jpg">
-            </div>
-            <div>
                 <img src="assets/images/18.jpg">
-            </div>
-            <div>
                 <img src="assets/images/19.jpg">
-            </div>
-            <div>
                 <img src="assets/images/20.jpg">
-            </div>
-            <div>
                 <img src="assets/images/21.jpg">
-            </div>
-            <div>
                 <img src="assets/images/22.jpg">
-            </div>
-            <div>
                 <img src="assets/images/23.jpg">
-            </div>
-            <div>
                 <img src="assets/images/24.jpg">
-            </div>
-            <div>
                 <img src="assets/images/25.jpg">
             </div>
         </div>
-    </header>
 </body>
 </html>
