--- a/gallery.html
+++ b/gallery.html
@@ -19,25 +19,17 @@
         <div class="container">
             <div class="heading">
                 <h3>Photo Gallery</h3>
-            </div>
+        </div>
             <div class="box">
                 <div class="pics">
                     <img src="assets/saddleback.jpg">
                     <img src="assets/two dogs.jpg">
-                </div>
-            </div>
-            <div class="box">
-                <div class="pics">
-                    <img src="assets/runners.jpg">
+                    <img src="assets/runners.jpg" class="runners">
                     <img src="assets/medium white.jpg">
-                </div>
-            </div>
-            <div class="box">
-                <div class="pics">
                     <img src="assets/m white.jpg">
                 </div>
             </div>
-        </div>
+        
     </header>
 </body>
 </html>
