--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FARM LIFE</title>
-    <link rel="stylesheet" href="assets/style2.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <header>
@@ -22,11 +22,11 @@
         </div>
             <div class="box">
                 <div class="pics">
-                    <img src="assets/saddleback.jpg">
-                    <img src="assets/two dogs.jpg">
-                    <img src="assets/runners.jpg" class="runners">
-                    <img src="assets/medium white.jpg">
-                    <img src="assets/m white.jpg">
+                    <img src="assets/images/saddleback.jpg">
+                    <img src="assets/images/two dogs.jpg">
+                    <img src="assets/images/runners.jpg" class="runners">
+                    <img src="assets/images/medium white.jpg">
+                    <img src="assets/images/m white.jpg">
                 </div>
             </div>
         
